# wagtail-django-recaptcha

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: nightly-tests.yml  publish.yml  test.yml
docs/: README.md
tests/testapp/testapp/: settings.py  urls.py
