[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wagtail-django-recaptcha"
version = "2.1.1"
description = "A simple recaptcha field for Wagtail Form Pages."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Wagtail Nest team", email = "hello@wagtail.org" }
]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 7",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
dependencies = [
    "wagtail>=7.0",
    "django-recaptcha>=4"
]

[project.optional-dependencies]
testing = [
    "tox>=4.18.1",
    "coverage>=6.5.0",
    "pre-commit>=4.0.0",
]
docs = []

[project.urls]
Source = "https://github.com/wagtail-nest/wagtail-django-recaptcha"
Changelog = "https://github.com/wagtail-nest/wagtail-django-recaptcha/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["wagtailcaptcha"]

[tool.ruff]
target-version = "py310"  # minimum target version

[tool.ruff.lint]
extend-select = [
    "B",    # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",   # flake8-comprehensions
    "DJ",   # flake8-django
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "INT",  # flake8-gettext
    "PIE",  # flake8-pie
    "PGH",  # pygrep-hooks
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "W",    # pycodestyle warnings
    "YTT",  # flake8-2020
    "UP",   # pyupgrade
    "RUF100",  # unused noqa
]

extend-ignore = [
    "E501",  # no line length errors
]
fixable = ["C4", "E", "F", "I", "UP"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
"wagtail" = ["wagtail", "modelcluster"]

[tool.ruff.lint.isort]
known-first-party = ["wagtailcaptcha"]
section-order = ["future", "standard-library", "django", "wagtail", "third-party", "first-party", "local-folder"]
force-sort-within-sections = true
lines-after-imports = 2
